Add orden in Routes and Modules

--- a/src/app/pages/paginas.component.html
+++ b/src/app/pages/paginas.component.html
@@ -127,9 +127,9 @@
     </div>
 
     <div class="card-block">
-      <h6>xdsadasdsad</h6>
+      <router-outlet></router-outlet>
     </div>
-
+ 
     <div class="card">
       <div class="card-x4">
         <div></div>
